--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Build distribution
-        run: ./setup.py sdist bdist_wheel
+      - name: Build
+        run: ./setup.py sdist
       - name: Release
         uses: pypa/gh-action-pypi-publish@v1.2.2
         with:
